--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,17 @@
 @import "./components/css/layout/layout.scss";
+* {
+  box-sizing: border-box;
+}
 body {
   background: #42607b;
+  padding: 0;
+  margin: 0;
+}
+.laoding {
+  color: #fff;
+  font-size: 18px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
