--- a/src/components/pages/Product/Product.scss
+++ b/src/components/pages/Product/Product.scss
@@ -6,6 +6,14 @@
   max-width: 100%;
   width: 50%;
   margin: 0 auto;
+  min-height: 100%;
+  height: 100vh;
+  @media (max-width: 671px) {
+    width: 100%;
+    height: auto;
+    word-wrap: break-word;
+    padding: 15px;
+  }
   > h1 {
     display: flex;
     align-items: center;
