--- a/src/components/pages/Product/Product.scss
+++ b/src/components/pages/Product/Product.scss
@@ -18,11 +18,20 @@
     display: flex;
     align-items: center;
     font-size: 20px;
+    margin-bottom: 50px;
     > img {
       width: 80px;
       height: auto;
       margin-right: 15px;
     }
+  }
+  > h2 {
+    font-size: 20px;
+    font-weight: normal;
+    margin: 0 0 10px 0;
+  }
+  > p {
+    margin: 0 0 15px 0;
   }
   > ul {
     margin: 0;
